fix bleeding

--- a/CD-RHUM-DISPLAY/src/index.css
+++ b/CD-RHUM-DISPLAY/src/index.css
@@ -8,7 +8,7 @@
 }
 
 body {
-  filter: url(/assets/bleeding.svg#svgfm-filter);
+  filter: url(/bleeding.svg#svgfm-filter);
 }
 
 .title {
